respect message repeat count for AWTRIX notification and remove custom app after repeats

--- a/blueprints/automation/awtrix_weather_warning_dwd.yaml
+++ b/blueprints/automation/awtrix_weather_warning_dwd.yaml
@@ -260,6 +260,7 @@ variables:
           'icon': warning_icon(warning_type),
           'text': text,
           'repeat': message_repeat,
+          'lifetime': 5,
           'color': color,
           'pushIcon': 2
         } -%}
@@ -289,6 +290,7 @@ variables:
             'icon': warning_icon(warning_type),
             'text': text,
             'repeat': message_repeat,
+            'lifetime': 5,
             'color': color,
             'pushIcon': 2
           } -%}
