--- a/blueprints/automation/awtrix_weather_warning_dwd.yaml
+++ b/blueprints/automation/awtrix_weather_warning_dwd.yaml
@@ -81,6 +81,18 @@ blueprint:
           max: 10
           step: 1.0
       default: 2
+    play_beep:
+      name: Play beep on new warning
+      description: Enable to send an RTTTL tone with the MQTT payload.
+      selector:
+        boolean: {}
+      default: false
+    beep_rtttl:
+      name: RTTTL melody
+      description: Custom RTTTL string that will be played when the beep option is enabled.
+      default: Beep:d=16,o=5,b=180:c6
+      selector:
+        text: {}
     full_day_names:
       name: Full weekday names
       description: Enable to display the day name in full (e.g. Sonntag instead of So).
@@ -186,6 +198,8 @@ variables:
   weather_preliminary_warning_var: !input weather_preliminary_warning_var
   warning_level_to_show: !input warning_level
   message_repeat: !input message_repeat
+  play_beep: !input play_beep
+  beep_rtttl: !input beep_rtttl
   icon_frost: !input icon_frost
   icon_thunderstorm: !input icon_thunderstorm
   icon_pouring: !input icon_pouring
@@ -259,11 +273,14 @@ variables:
         {%- set frame = {
           'icon': warning_icon(warning_type),
           'text': text,
-          'repeat': message_repeat,
+          'repeat': message_repeat | int,
           'lifetime': 5,
           'color': color,
           'pushIcon': 2
         } -%}
+        {%- if play_beep and frames.items | length == 0 -%}
+          {%- set frame = frame | combine({'rtttl': beep_rtttl}) -%}
+        {%- endif -%}
         {%- set frames.items = frames.items + [frame] -%}
       {%- endif -%}
     {%- endfor -%}
@@ -289,11 +306,14 @@ variables:
           {%- set frame = {
             'icon': warning_icon(warning_type),
             'text': text,
-            'repeat': message_repeat,
+            'repeat': message_repeat | int,
             'lifetime': 5,
             'color': color,
             'pushIcon': 2
           } -%}
+          {%- if play_beep and frames.items | length == 0 -%}
+            {%- set frame = frame | combine({'rtttl': beep_rtttl}) -%}
+          {%- endif -%}
           {%- set frames.items = frames.items + [frame] -%}
         {%- endif -%}
       {%- endfor -%}
@@ -322,6 +342,17 @@ actions:
             retain: false
             topic: "{{ repeat.item }}"
             payload: ''
+        - choose:
+            - conditions:
+                - condition: template
+                  value_template: "{{ play_beep and payload != '' }}"
+              sequence:
+                - action: mqtt.publish
+                  data:
+                    qos: 0
+                    retain: false
+                    topic: "{{ repeat.item | replace('/custom/' ~ app_topic, '/rtttl') }}"
+                    payload: "{{ beep_rtttl }}"
         - action: mqtt.publish
           data:
             qos: 0
